2015-02-17  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Add duplicate entries in localMethodsSignatureMap to enable duplicate
    inherited method checking.

2015-02-13  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Renamed the superinterfacesIterator method to interfacesIterator and
    added declaration of interfacesIterator on TypeDecl. This means that
    interfaces are now iterated over using the same iterator for both
    ClassDecl and InterfaceDecl.
    * Moved declaration of interfacesMethodsIterator from ClassDecl to
    the superclass TypeDecl.

2015-02-11  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Renamed the [ConstructorInvocation] child of ConstructorDecl to
    ParsedConstructorInvocation. This child should no longer be used to store
    implicit constructor invocations. Added new NTA child
    /ImplicitConstructorInvocation/ to represent the implicit constructor
    invocations, if needed, and added attributes named
    hasConstructorInvocation and getConstructorInvocation to mimic the former
    ConstructorInvocation child.  These changes allow for implicit constructor
    invocations to be generated while still retaining the original, parsed,
    constructor invocation in the AST.

2015-02-05  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Replaced emitEvalBranch by branchTrue and branchFalse.
    * Throw error if the constant pool overflows.

2015-01-30  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Added type lookup caches for improved type lookup.
    * Fixed error where a library type could be incorrectly reported as
    duplicate declarations when local declarations in source files on the
    source path contained the same type. This issue was caused by library
    type lookups only working as intended with types having the same name
    as the containing compilation unit.

2015-01-29  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Improved numeric literal parsing and error messages
