@@ -4,7 +4,7 @@ buildscript {
 		url 'http://jastadd.org/mvn/'
 	}
 	dependencies {
-		classpath group: 'org.jastadd', name: 'jastaddgradle', version: '1.9.3'
+		classpath group: 'org.jastadd', name: 'jastaddgradle', version: '1.9.4'
 	}
 }
 
@@ -18,11 +18,12 @@ apply plugin: 'jastadd'
 apply plugin: 'eclipse'
 
 jastadd {
-	modules 'java4', 'java5', 'java6', 'java7', 'java8'
+	// module specifications
+	modules 'modules'
 
-	// JastAddJ build parameters
-	// use -Djastadd.module="..." to select module to build
-	// default is "java7 backend"
+	// Target module:
+	// call Gradle with -Djastadd.module="..." to select module to build (default is "java7 backend")
+	// remember to run the 'clean' task if a new target module is specified!
 	module = System.properties['jastadd.module'] ?: "java7 backend"
 
 	astPackage = "AST"
@@ -31,10 +32,21 @@ jastadd {
 	parser.name = "JavaParser"
 }
 
-if (jastadd.module.name.endsWith('backend'))
+// add main classes depending on target module
+if (jastadd.module.name.endsWith('backend')) {
+	// add the backend main classes
 	mainClassName = 'org.jastadd.jastaddj.JavaCompiler'
-else
+	sourceSets {
+		main.java.srcDir 'src/backend-main'
+		main.java.srcDir 'src/frontend-main' // include JastAddJVersion
+	}
+} else {
 	mainClassName = 'org.jastadd.jastaddj.JavaChecker'
+	sourceSets {
+		main.java.srcDir 'src/frontend-main'
+	}
+}
+
 jar.baseName = 'jastaddj'
 jar.manifest.attributes 'Main-Class': mainClassName
 jar.destinationDir = projectDir
@@ -44,6 +56,7 @@ sourceCompatibility = '1.6'
 targetCompatibility = '1.6'
 
 dependencies {
+	// Ant is used for JastAddJ Ant task
 	compile group: 'org.apache.ant', name: 'ant', version: '1.9.4'
 }
 
