@@ -140,7 +140,9 @@ Build a standard release:
 			nowarn="true"
 			includeantruntime="true">
 			<src path="${src.dir}/frontend"/>
+			<src path="${src.dir}/frontend-main"/>
 			<src path="${src.dir}/backend"/>
+			<src path="${src.dir}/backend-main"/>
 			<src path="${gen.dir}"/>
 		</javac>
 	</target>
