@@ -27,6 +27,7 @@
 			nowarn="true"
 			includeantruntime="true">
 			<src path="${src.dir}/frontend"/>
+			<src path="${src.dir}/frontend-main"/>
 			<src path="${gen.dir}"/>
 		</javac>
 		<antcall target="copy-resources"/>
@@ -90,7 +91,9 @@
 			nowarn="true"
 			includeantruntime="true">
 			<src path="${src.dir}/frontend"/>
+			<src path="${src.dir}/frontend-main"/>
 			<src path="${src.dir}/backend"/>
+			<src path="${src.dir}/backend-main"/>
 			<src path="${gen.dir}"/>
 		</javac>
 		<antcall target="copy-resources"/>
