@@ -28,6 +28,7 @@
 			nowarn="true"
 			includeantruntime="true">
 			<src path="${src.dir}/frontend"/>
+			<src path="${src.dir}/frontend-main"/>
 			<src path="${gen.dir}"/>
 		</javac>
 		<antcall target="copy-resources"/>
@@ -111,7 +112,9 @@
 			nowarn="true"
 			includeantruntime="true">
 			<src path="${src.dir}/frontend"/>
+			<src path="${src.dir}/frontend-main"/>
 			<src path="${src.dir}/backend"/>
+			<src path="${src.dir}/backend-main"/>
 			<src path="${gen.dir}"/>
 		</javac>
 		<antcall target="copy-resources"/>
