@@ -1,3 +1,13 @@
+2015-02-24  Jesper Öqvist <jesper.oqvist@cs.lth.se>
+
+    * Frontend and backend main classes have been moved to the new source
+    directories src/frontend-main and src/backend-main, respectively. The
+    JastAddJVersion class which is used by these main classes to obtain a
+    version number was moved to src/frontend-main. This change makes it
+    easier for extensions to build without the JastAddJ main classes, which
+    may be undesired in extensions. Extensions that need these classes will
+    need to add the new source directories to their classpath.
+
 2015-02-17  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
     * Add duplicate entries in localMethodsSignatureMap to enable duplicate
